# unified-kernel-framework-backend

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  adr12-refactor.md  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yml
cuda_docker_env/: Dockerfile  Dockerfile.dockerignore  README-custom-env.md  README-quickstart.md  docker-compose.yml
cuda_docker_env/compat/: matrix.env
cuda_docker_env/docker/: .env.example
cuda_docker_env/envs/: cuda118-torch210.yaml  cuda121-torch221.yaml  cuda124-tf215.yaml  cuda124-torch260.yaml  cuda126-torch260.yaml  cuda130-torch2100.yaml
cuda_docker_env/scripts/: build-env.sh  jupyter.sh  run-cmake.sh  shell.sh
docs/: class_structure.md  frontend-plan.md
docs/adr/: 0001-llvm-inspired-pipeline-architecture.md  0002-ptx-as-intermediate-cubin-for-autotuning.md  0003-database-for-autotune-storage.md  0004-async-plugin-execution.md  0005-problem-specification-format.md  0006-source-as-ir-native-compilation.md  0007-autotuning-strategies.md  0008-observer-custom-metrics.md  0009-profiler-autotuner-split.md  0010-kernel-problem-registry.md  0011-tune-service.md  0012-single-point-execution.md  0013-link-time-size-bindings.md  0014-jit-compilation-with-constexpr-sizes.md  0015-backend-contract-redesign.md  0016-dtype-template-mapping.md  0017-problem-versioning.md  0018-binary-artifact-exposure.md  0019-problem-versioning-belongs-to-frontend.md  0020-artifact-export-separated-from-autotuning.md  0021-abstract-autotuner-protocol.md  0021-abstract-pipeline-protocol.md  0022-pipeline-orchestrator-and-debug-session.md  0023-coverage-axes-vs-correctness-hash.md  0024-arch-refactor-skill.md  0025-problem-dtype-combinations.md  0026-kernel-type-args-slot-binding.md  README.md
kernel_pipeline_backend/: __init__.py
kernel_pipeline_backend/autotuner/: __init__.py  autotuner.py  profiler.py  strategy.py
kernel_pipeline_backend/backends/: __init__.py
kernel_pipeline_backend/core/: __init__.py  compiler.py  exporter.py  pipeline.py  registry.py  runner.py  types.py
kernel_pipeline_backend/device/: __init__.py  device.py
kernel_pipeline_backend/orchestrator/: __init__.py  orchestrator.py
kernel_pipeline_backend/pipeline/: __init__.py  native.py  pipeline.py
test_kernel_backend/: __init__.py
tests/: test_adr020_invariant.py
(+118 files in other folders)
