[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "kernel-pipeline-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "numpy>=2.1.0",
]

[tool.scikit-build]
# Pure Python for now; CMake handles future native extensions.
wheel.packages = ["kernel_pipeline_backend"]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
